# MilkRust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  GAPS.md  LICENSE-SCOPE.md  README.md  package-lock.json  package.json
.council/: latest-candidate-counts.md
.github/: WINDOWS_RUNNER.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/rustymilk-player/: index.html  style.css
apps/rustymilk-player/src/: main.js
apps/rustymilk-studio/: index.html  style.css
apps/rustymilk-studio/src/: main.js
archive/slskdn-js-milkdrop-port/: README.md
archive/slskdn-js-milkdrop-port/src/: nativeMilkdropEngine.js
content/: README.md  catalog.json
content/community-unlicensed/: README.md
content/community-unlicensed/projectm-classic/: RUSTYMILK-COMMUNITY-NOTICE.md  manifest.json
content/community-unlicensed/projectm-cream-of-the-crop/: RUSTYMILK-COMMUNITY-NOTICE.md
content/community-unlicensed/projectm-en-d/: RUSTYMILK-COMMUNITY-NOTICE.md  manifest.json
content/community-unlicensed/projectm-milkdrop-original/: RUSTYMILK-COMMUNITY-NOTICE.md  manifest.json
content/community-unlicensed/projectm-milkdrop-texture-pack/: RUSTYMILK-COMMUNITY-NOTICE.md  manifest.json
crates/milkrust-cli/: Cargo.toml
crates/milkrust-cli/src/: lib.rs  main.rs
crates/milkrust-core/: Cargo.toml
crates/milkrust-core/src/: lib.rs  lib.rs.tmp
crates/milkrust-desktop/: Cargo.toml  README.md
crates/milkrust-desktop/src/: audio_provider.rs  cli_support.rs  lib.rs  main.rs  player_api.rs  runner_player.rs  runner_player_ui.rs  runner_probe.rs  runner_studio.rs  session.rs
crates/milkrust-expr/: Cargo.toml
crates/milkrust-expr/src/: lib.rs
crates/milkrust-pack/: Cargo.toml
crates/milkrust-pack/src/: lib.rs
crates/milkrust-renderer-core/: Cargo.toml
crates/milkrust-renderer-core/src/: lib.rs
crates/milkrust-renderer-headless/: Cargo.toml
crates/milkrust-renderer-headless/src/: lib.rs
crates/milkrust-wasm/: Cargo.toml
crates/milkrust-wasm/src/: lib.rs  renderer.rs
crates/rustymilk-cli/: Cargo.toml
crates/rustymilk-cli/src/: lib.rs  main.rs
crates/rustymilk-core/: Cargo.toml
crates/rustymilk-core/src/: lib.rs
crates/rustymilk-desktop/: Cargo.toml  README.md
crates/rustymilk-desktop/src/: audio.rs  cli_support.rs  lib.rs  main.rs  player_api.rs  runner_player.rs  runner_player_ui.rs  runner_probe.rs  runner_studio.rs  session.rs
crates/rustymilk-expr/: Cargo.toml
crates/rustymilk-expr/src/: lib.rs
crates/rustymilk-pack/: Cargo.toml
crates/rustymilk-pack/src/: lib.rs
crates/rustymilk-preset/: Cargo.toml
crates/rustymilk-preset/src/: lib.rs
crates/rustymilk-renderer-core/: Cargo.toml
crates/rustymilk-renderer-core/src/: lib.rs
crates/rustymilk-renderer-headless/: Cargo.toml
crates/rustymilk-renderer-headless/src/: lib.rs
crates/rustymilk-wasm/: Cargo.toml
crates/rustymilk-wasm/src/: lib.rs  renderer.rs
docs/: ARCHITECTURE.md  PLUGIN_API.md  PRESET_PACKS.md  RENDERER_AND_PLAYER_IMPORT_PLAN.md  ROADMAP.md  SOURCE_IMPORT_AUDIT.md  THIRD_PARTY_CONTENT_AUDIT.generated.md  THIRD_PARTY_CONTENT_POLICY.md
docs/dev/: bug-burndown-ledger.md  bug-council-active-backlog.md  bug-council-behavior-pinning.md  bug-council-negative-space.md  bug-council-phases.md  bug-council-severity-schema.md  bug-council-sibling-search.md
docs/dev/council-calibration/: rustymilk-taint-bad.js  rustymilk-taint-bad.rs  rustymilk-taint-good.js  rustymilk-taint-good.rs
examples/browser-smoke/: index.html
examples/sample-pack/: manifest.json
examples/sample-pack/fragments/: center-polygon.json
examples/sample-pack/plugins/: default-playlist.json
examples/sample-pack/presets/: blue-shape.milk  warm-scope.milk
examples/web-component/: index.html
scripts/: check-bug-council-all-phases.sh  check-council-active-backlog.sh  check-council-negative-space.sh  check-remediation-baseline.sh  check-rustymilk-taint-lenses.sh  run-bug-council-all-phases.sh  run-council-active-bughunt.sh  scan-bug-council-candidates.sh
tools/: audit-rustymilk-compliance.mjs  audit-rustymilk-content-sources.mjs  build-wasm-package.sh  extract-expr.py  extract-preset.py  measure-rustymilk-performance.mjs  pull-rustymilk-community-content.mjs  report-rustymilk-community-packs.mjs  report-rustymilk-compatibility.mjs  report-rustymilk-desktop-plugin-discovery.mjs  serve-rustymilk-app.mjs  smoke-rustymilk-apps.mjs  smoke-rustymilk.mjs  validate-rustymilk-content-catalog.mjs
