[workspace]
members = [
    "crates/milkrust-cli",
    "crates/milkrust-core",
    "crates/milkrust-expr",
    "crates/milkrust-pack",
    "crates/milkrust-renderer-core",
    "crates/milkrust-renderer-headless",
    "crates/milkrust-desktop",
    "crates/milkrust-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
homepage = "https://github.com/snapetech/MilkRust"
repository = "https://github.com/snapetech/MilkRust"
rust-version = "1.76"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
