[package]
name = "milkrust-expr"
version = "0.1.0"
description = "MilkRust expression tokenizer, recursive-descent parser, and equation evaluation engine"
keywords = ["visualizer", "expression", "parser", "milkdrop"]
categories = ["parsing", "multimedia"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
