[package]
name = "rustymilk-cli"
version = "0.1.0"
description = "Command-line validation, inspection, compatibility, and render-stat tooling for RustyMilk"
keywords = ["visualizer", "cli", "milkdrop", "wasm", "audio"]
categories = ["command-line-utilities", "multimedia", "rendering"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustymilk"
path = "src/main.rs"

[dependencies]
rustymilk-core = { path = "../rustymilk-core" }
rustymilk-pack = { path = "../rustymilk-pack" }
rustymilk-renderer-core = { path = "../rustymilk-renderer-core" }
rustymilk-renderer-headless = { path = "../rustymilk-renderer-headless" }
serde_json = "1"

[lints]
workspace = true
