[package]
name = "rustymilk-pack"
version = "0.1.0"
description = "Portable RustyMilk preset pack manifests, loading, and validation"
keywords = ["visualizer", "preset", "pack", "milkdrop", "audio"]
categories = ["multimedia", "rendering"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustymilk-core = { path = "../rustymilk-core" }
serde_json = "1"

[lints]
workspace = true
