[package]
name = "rustymilk-preset"
version = "0.1.0"
description = "RustyMilk preset parsing, serialization, compatibility, and shader translation"
keywords = ["visualizer", "expression", "parser", "milkdrop"]
categories = ["parsing", "multimedia"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustymilk-expr = { path = "../rustymilk-expr" }
serde_json = "1"

[lints]
workspace = true
