[package]
name = "rustymilk-renderer-core"
version = "0.1.0"
description = "Renderer backend contracts and capability types for RustyMilk"
keywords = ["visualizer", "renderer", "webgl", "webgpu", "audio"]
categories = ["multimedia", "rendering"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustymilk-core = { path = "../rustymilk-core" }

[lints]
workspace = true
