[package]
name = "rustymilk-renderer-headless"
version = "0.1.0"
description = "Headless RustyMilk renderer backend for tests, reports, and batch tooling"
keywords = ["visualizer", "renderer", "headless", "webgpu", "audio"]
categories = ["multimedia", "rendering"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustymilk-core = { path = "../rustymilk-core" }
rustymilk-renderer-core = { path = "../rustymilk-renderer-core" }

[lints]
workspace = true
